--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,5 @@
 fixtures:
   repositories:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
-    file_concat: git://github.com/electrical/puppet-lib-file_concat.git
-    python: git://github.com/footballradar/puppet-python.git
   symlinks:
-    beaver: "#{source_dir}"
+    nswl: "#{source_dir}"
